Swagger for lesson&module
