# docs/swagger.json
@@ -73,6 +73,55 @@
                 }
             }
         },
+        "/adm/lesson/": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Add lesson",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lesson"
+                ],
+                "summary": "AddLesson",
+                "operationId": "AddLesson",
+                "parameters": [
+                    {
+                        "description": "Add Lesson (OrderId starts with one)",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.AddLesson"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/adm/lesson/{id}": {
             "put": {
                 "security": [
@@ -107,6 +156,102 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/handler.EdLesson"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete lesson by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lesson"
+                ],
+                "summary": "DeleteLesson",
+                "operationId": "DeleteLesson",
+                "parameters": [
+                    {
+                        "description": "Lesson ID",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.Delete"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/adm/module/": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Add Module",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "module"
+                ],
+                "summary": "AddModule",
+                "operationId": "AddModule",
+                "parameters": [
+                    {
+                        "description": "Add Module (OrderId starts with one)",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.AddModule"
                         }
                     }
                 ],
@@ -163,6 +308,53 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/handler.EdModule"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete Module by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "module"
+                ],
+                "summary": "DeleteModule",
+                "operationId": "DeleteModule",
+                "parameters": [
+                    {
+                        "description": "Module ID",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.Delete"
                         }
                     }
                 ],
@@ -533,10 +725,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "nameFolder": {
-                    "description": "DELETE",
-                    "type": "string"
                 }
             }
         },
@@ -553,10 +741,6 @@
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "nameFile": {
-                    "description": "DELETE",
                     "type": "string"
                 },
                 "orderID": {
@@ -585,10 +769,6 @@
                 "name": {
                     "type": "string"
                 },
-                "nameFolder": {
-                    "description": "DELETE",
-                    "type": "string"
-                },
                 "orderID": {
                     "type": "integer"
                 }
@@ -613,6 +793,54 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.AddLesson": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "module_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.AddModule": {
+            "type": "object",
+            "properties": {
+                "course_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.Delete": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
